[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment-6"
version = "0.1.0"
description = "Assignment 6: Medians and Order Statistics & Elementary Data Structures"
readme = "README.md"
urls = {homepage = "https://github.com/aashishshrestha09/MSCS-532-M20-Assignment-6"}
dependencies = [
    "pandas==2.3.0",
    "tabulate==0.9.0",
    "seaborn==0.13.2",
]

[tool.setuptools]
packages = ["Part1_SelectionAlgorithms", "Part2_DataStructures"]

[project.optional-dependencies]
dev = [
  "black==24.3.0",
  "pyflakes==3.2.0",
]